# nodify-ctx

./: .env.example  .gitignore  README.md  agent_tools.py  graph_builder.py  main_agent.py  parser.py  pyproject.toml  requirements.txt
src/nodifyctx/: __init__.py  __main__.py  agent.py  graph_builder.py  parser.py  tools.py
tests/: test_agent.py  test_cli_integration.py  test_configuration.py  test_graph_builder.py  test_parser.py  test_parser_helpers.py  test_tools.py
