[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodifyctx"
version = "0.1.0"
description = "Local code graph indexing and exploration for Python, JavaScript, TypeScript, and React repositories."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "langchain-core>=0.3.30,<0.4.0",
  "langchain-openai>=0.2.14,<0.4.0",
  "langgraph>=0.2.67,<0.4.0",
  "neo4j>=5.26.0,<6.0.0",
  "openai>=1.58.1,<2.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "qdrant-client>=1.12.1,<2.0.0",
  "tree-sitter>=0.25.2,<0.26.0",
  "tree-sitter-javascript>=0.25.0,<0.26.0",
  "tree-sitter-python>=0.25.0,<0.26.0",
  "tree-sitter-typescript>=0.23.2,<0.24.0",
  "typing-extensions>=4.12.2,<5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5,<9.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
]

[project.scripts]
nodifyctx = "nodifyctx.agent:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["nodifyctx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-config --strict-markers"